--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
 		<!-- p means paragraph -->
 		<div>
 			<h1>Katherine Ngo</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<p>Human Computer Interation and Computer Science Student</p>
 		</div>
 
 
